--- a/index.html
+++ b/index.html
@@ -4,50 +4,74 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="src/styles.css">
     <title>Game World</title>
-</head>
-<body>
+</head>  <body>
     <section id="top-navbar">
-        <img src="" alt="website logo">
-        <form action="">
-            <input type="text">
-            <button></button>
-        </form>
+      <img src="src/images/web-logo.png" alt="website logo" id="web-logo" />
+      <form action="">
+        <input type="text" />
+        <button>Search</button>
+      </form>
     </section>
 
     <section id="latest-releases">
-        <div class="">
-            <h1>Latest Releases</h1>
-        </div>
-        <div class="carousel">
-            <img src="" alt="">
-            <p>Placeholder text</p>
-        </div>
+      <div class="web-header">
+        <h1 class="web-header">Latest Releases</h1>
+      </div>
+      <div class="carousel">
+        <img src="src/images/maxresdefault.jpg" alt="" />
+        <p>Placeholder text</p>
+        <img src="src/images/maxresdefault.jpg" alt="" />
+        <p>Placeholder text</p>
+        <img src="src/images/maxresdefault.jpg" alt="" />
+        <p>Placeholder text</p>
+        <img src="src/images/maxresdefault.jpg" alt="" />
+        <p>Placeholder text</p>
+        <img src="src/images/maxresdefault.jpg" alt="" />
+        <p>Placeholder text</p>
+      </div>
     </section>
 
     <section id="extra-info">
-        <!-- carousel will go here -->
+      <h2>Extra info to go here</h2>
+      <p>
+        Proin condimentum risus est, id iaculis risus euismod in. Quisque rutrum
+        venenatis purus et ullamcorper. Vestibulum iaculis non felis et
+        bibendum. Nulla fringilla orci nunc. Phasellus urna enim, cursus nec
+        vestibulum vel, placerat sit amet nunc. Donec eleifend eu enim ac
+        consequat. Aliquam ut semper magna. In eros diam, pharetra id massa id,
+        tempor feugiat purus. Aenean nec tortor lacus. Aliquam erat volutpat.
+        Nam at ante suscipit, tincidunt tortor quis, blandit nunc. Nunc eu
+        varius turpis, sit amet venenatis urna. Sed vehicula purus tincidunt
+        ante semper mattis.
+      </p>
+      <!-- carousel will go here -->
+      <img src="src/images/maxresdefault.jpg" alt="" />
+      <p>Placeholder text</p>
+      <img src="src/images/maxresdefault.jpg" alt="" />
+      <p>Placeholder text</p>
+      <img src="src/images/maxresdefault.jpg" alt="" />
+      <p>Placeholder text</p>
     </section>
 
-    <section id="footer">
-        <div>
-            <h3>External links</h3>
-            <ul>
-                <li>Link 1</li>
-                <li>Link 2</li>
-                <li>Link 3</li>
-            </ul>
-        </div>
-        <div>
-            <h3>Contact form</h3>
-            <form action="">
-                <input type="">
-                <textarea name="" id="" cols="30" rows="10"></textarea>
-            </form>
-        </div>
-    </section>
+    <footer id="footer">
+      <div>
+        <h3>External links</h3>
+        <ul>
+          <li>Link 1</li>
+          <li>Link 2</li>
+          <li>Link 3</li>
+        </ul>
+      </div>
+      <div>
+        <h3>Contact form</h3>
+        <form action="">
+          <input type="" />
+          <textarea name="" id="" cols="30" rows="10"></textarea>
+        </form>
+      </div>
+    </footer>
 
-    <script src=""></script>
-</body>
+  </body>
 </html>
